[package]
name = "tcp-echo-benchmark"
description = "A high-performance TCP echo server benchmark tool measuring throughput using concurrent async clients. Supports configurable payload size, connection count, and test duration."
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gohryt/tcp-echo-benchmark"

[[bin]]
name = "tcp-echo-benchmark"
path = "src/main.rs"

[dependencies]
argh = "0.1.13"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "net",
    "sync",
    "time",
] }
